Added Sidebar, added User Profile

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -953,7 +953,7 @@ ul.cart-list > li.total > .btn:hover{
 .why-text h4{
     font-size: 16px;
     font-weight: 700;
-    padding-bottom: 15px;
+    margin-bottom: 15px;
 }
 .why-text h5{
     font-size: 18px;
