--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -4,6 +4,9 @@
     --light: #F3F6F9;
     --dark: #191C24;
 }
+body{
+    overflow-x: hidden;
+}
 
 .back-to-top {
     position: fixed;
@@ -35,12 +38,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    bottom: 0;
+    bottom:0;
     width: 250px;
-    height: 100vh;
+    height: 100%;
     overflow-y: auto;
-    background: var(--light);
-    transition: 0.5s;
+    background-color: F8F9FA;
     z-index: 1;
 }
 
@@ -100,7 +102,6 @@
 .sidebar .navbar .navbar-nav .nav-link:hover,
 .sidebar .navbar .navbar-nav .nav-link.active {
     color: #b0b435;
-    border-color: #b0b435;
 }
 
 .sidebar .navbar .navbar-nav .nav-link i {
@@ -244,12 +245,12 @@
     overflow: auto;
 }
 .page-link{
-    color: #b0b435 ;
+    color:black ;
+    background-color: white;
 }
-.page-item.active .page-link{
+.page-item.active{
     background-color:#b0b435 !important;
-    border-color: #b0b435;
-    color: white;
+    color: #F8F9FA;
 }
 .nav-item{
     font-size: 16px;
